tests/baselines/reference/nodeModulesImportModeDeclarationEmit2(module=nodenext).errors.txt
/index.ts(6,14): error TS2305: Module '"pkg"' has no exported member 'RequireInterface'.
/index.ts(6,50): error TS1454: `resolution-mode` can only be set for type-only imports.
/index.ts(7,49): error TS1454: `resolution-mode` can only be set for type-only imports.


==== /index.ts (3 errors) ====
    import type { RequireInterface } from "pkg" assert { "resolution-mode": "require" };
    import type { ImportInterface } from "pkg" assert { "resolution-mode": "import" };
    
    export interface LocalInterface extends RequireInterface, ImportInterface {}
    
    import {type RequireInterface as Req} from "pkg" assert { "resolution-mode": "require" };
                 ~~~~~~~~~~~~~~~~
!!! error TS2305: Module '"pkg"' has no exported member 'RequireInterface'.
                                                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1454: `resolution-mode` can only be set for type-only imports.
    import {type ImportInterface as Imp} from "pkg" assert { "resolution-mode": "import" };
                                                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1454: `resolution-mode` can only be set for type-only imports.
    export interface Loc extends Req, Imp {}
    
    export type { RequireInterface } from "pkg" assert { "resolution-mode": "require" };
    export type { ImportInterface } from "pkg" assert { "resolution-mode": "import" };
    
==== /node_modules/pkg/package.json (0 errors) ====
    {
        "name": "pkg",
        "version": "0.0.1",
        "exports": {
            "import": "./import.js",
            "require": "./require.js"
        }
    }
==== /node_modules/pkg/import.d.ts (0 errors) ====
    export interface ImportInterface {}
==== /node_modules/pkg/require.d.ts (0 errors) ====
    export interface RequireInterface {}
==== /package.json (0 errors) ====
    {
        "private": true,
        "type": "module"
    }